# cyber-attack-detection

./: .gitignore  README.md  pyproject.toml  render.yaml
artifacts/models/: isolation_forest.joblib  label_encoder.joblib  logistic_regression.joblib  random_forest.joblib
artifacts/reports/: alerts.db  data_quality_report.json  model_metrics.json  model_summary.md  performance_report.json
data/processed/: test.csv  train.csv  val.csv
data/raw/: synthetic_network_traffic.csv
scripts/: perf_benchmark.py  render_start.sh
src/cads/: __init__.py  cli.py  config.py  logging_utils.py
src/cads/alerting/: engine.py  storage.py
src/cads/api/: app.py
src/cads/dashboard/: app.py
src/cads/data/: __init__.py  features.py  ingest.py  pipeline.py  preprocess.py  schema.py  synthetic.py
src/cads/inference/: replay.py  schemas.py  service.py
src/cads/models/: evaluate.py  train.py
tests/: conftest.py  test_alert_store_unit.py  test_alerting.py  test_api_predict.py  test_api_validation.py  test_data_pipeline.py  test_features_unit.py  test_inference_modes_unit.py  test_preprocess_unit.py  test_training_pipeline.py
