[project]
name = "cyber-attack-detection"
version = "0.1.0"
description = "Structured cyber attack detection pipeline for data prep and model training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "joblib>=1.4.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.31.0",
  "pydantic>=2.9.0",
  "streamlit>=1.39.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
cads = "cads.cli:main"
cads-api = "cads.api.app:run"
cads-dashboard = "cads.dashboard.app:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cads"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
